Mobile Responsive diagnosed

--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
                 </span>
             </a>
             <nav id="navbar" class="navbar">
-                <ul id="nav__list" class="nav__list">
-
-                </ul>
+                <ul id="nav__list" class="nav__list"></ul>
             </nav>
+            <div class="mobile__navIcon__wrapper">
+                <div id="hamburger__menu" class="hamburger__menu">
+                    <div id="top__bar" class="top__bar bar"></div>
+                    <div id="middle__bar" class="middle__bar bar"></div>
+                    <div id="bottom__bar" class="bottom__bar bar"></div>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -68,8 +73,19 @@
                 </div>
                 <ol id="feature__list_02" class="feature__list_02"></ol>
             </div>
-
         </section>
+
+        <!-- 02.04 ABOUT US SECTION -->
+
+        <section id="about__section" class="about__section section">
+            <div class="about__container container">
+                <div id="about__card" class="about__card"></div>
+                <div class="image__wrapper">
+                    <img class="profile__image" src="./assets/images/about-section.jpg" alt="Christina Smiling">
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- 03 FOOTER SECTION -->
