Dynamic Header and Navbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav id="navbar" class="navbar">
                 <ul id="nav__list" class="nav__list"></ul>
             </nav>
-            <div class="mobile__navIcon__wrapper">
+            <div class="mobile__navIcon_wrapper">
                 <div id="hamburger__menu" class="hamburger__menu">
                     <div id="top__bar" class="top__bar bar"></div>
                     <div id="middle__bar" class="middle__bar bar"></div>
@@ -35,6 +35,11 @@
             </div>
         </div>
     </header>
+    <nav id="navbar__mobile" class="navbar__mobile section">
+        <div class="container">
+            <ul id="nav__list_mobile" class="nav__list_mobile nav__list"></ul>
+        </div>
+    </nav>
 
     <!-- 02 MAIN CONTENT SECTION -->
 
