--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/app.css">
     <title>Cain-Surrey Capital</title>
 </head>
@@ -55,10 +57,12 @@
                 <img src="./assets/images/hero-section.jpg" alt="" class="hero__image" >
             </div>
             <div class="hero__description_container container">
-                <span class="dash__affix bgc__dark"></span>
-                <p class="hero__description">
-                    We are committed to helping our clients achieve their financial goals through expert advice, innovative solutions, and unparalleled execution.
-                </p>
+                <div class="hero__desc_wrapper">
+                    <span class="dash__affix bgc__dark"></span>
+                    <p class="hero__description">
+                        We are committed to helping our clients achieve their financial goals through expert advice, innovative solutions, and unparalleled execution.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -96,7 +100,49 @@
     <!-- 03 FOOTER SECTION -->
 
     <footer id="footer" class="footer section">
-
+        <div class="container">
+            <section class="footer__top">
+                <div class="footer__top_a">
+                    <div href="/" class="logo">
+                        <img src="/assets/images/Logo Image.png" alt="Cain-Surrey Capital" class="logo__image"  width="20" height="20" />
+                        <span class="logo__text">
+                            Cain-Surrey Capital
+                        </span>
+                    </div>
+                    <p class="desc">
+                        Our experienced team of professionals works closely 
+                        with our clients to provide tailored solutions that 
+                        meet their unique needs. Whether you are looking to 
+                        raise capital, acquire a business, or manage risk, 
+                        we have the expertise and resources to help you 
+                        achieve success.
+                    </p>
+                </div>
+                <div id="footer__links_wrapper" class="footer__top_b"></div>
+            </section>
+            <hr class="divider__axis_x">
+            <section class="footer__bottom">
+                <small>&copy; 2023. Cain-Surrey Capital. All Rights Reserved.</small>
+                <div class="follow__links">
+                    <a href="/" title="Instagram">
+                        <i class="ri-instagram-line line"></i>
+                        <i class="ri-instagram-fill fill"></i>
+                    </a>
+                    <a href="/" title="Facebook">
+                        <i class="ri-facebook-box-line line"></i>
+                        <i class="ri-facebook-box-fill fill"></i>
+                    </a>
+                    <a href="/" title="Twitter">
+                        <i class="ri-twitter-line line"></i>
+                        <i class="ri-twitter-fill fill"></i>
+                    </a>
+                    <a href="/" title="Linkedin">
+                        <i class="ri-linkedin-box-line line"></i>
+                        <i class="ri-linkedin-box-fill fill"></i>
+                    </a>
+                </div>
+            </section>
+        </div>
     </footer>
     <script type="module" src="/js/app.js"></script>
 </body>
